# pydatapanama-cursos

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml
cursos/analisis_datos/: README.md  environment.yml  modulo04  pyproject.toml
cursos/analisis_datos/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTOR.md
cursos/analisis_datos/notebooks/: 01_user_modulo1_estructura.ipynb  pyda_modulo01_DiegoVentura23.ipynb  pyda_modulo01_JosephJosue.ipynb  pyda_modulo01_carlosman.ipynb  pyda_modulo01_fernandovillalobos.ipynb  pyda_modulo01_fmarchena.ipynb  pyda_modulo01_hezekielperez_paths.ipynb  pyda_modulo01_hezekielperezssdev.ipynb  pyda_modulo01_jasonssdev.ipynb  pyda_modulo01_marcoart07.ipynb  pyda_modulo01_miltonpineda.ipynb  pyda_modulo01_mmenottih.ipynb  pyda_modulo01_mrescobar02.ipynb  pyda_modulo01_nelsonjr0990.ipynb  pyda_modulo01_panregitt.ipynb  pyda_modulo01_vacostatech.ipynb  pyda_modulo02_DiegoVentura23.ipynb  pyda_modulo02_JosephJosue.ipynb  pyda_modulo02_carlosman.ipynb  pyda_modulo02_fernandovillalobos.ipynb  pyda_modulo02_fmarchena.ipynb  pyda_modulo02_hezekielperezssdev.ipynb  pyda_modulo02_jasonssdev.ipynb  pyda_modulo02_marcoart07.ipynb  pyda_modulo02_miltonpineda.ipynb  pyda_modulo02_mmenottih.ipynb  pyda_modulo02_mrescobar02.ipynb  pyda_modulo02_nelsonjr0990.ipynb  pyda_modulo02_user.ipynb  pyda_modulo02_vacostatech.ipynb  pyda_modulo03_DiegoVentura23.ipynb  pyda_modulo03_JosephJosue.ipynb  pyda_modulo03_Ovangs.ipynb  pyda_modulo03_carlosman.ipynb  pyda_modulo03_fernandovillalobos.ipynb  pyda_modulo03_fmarchena.ipynb  pyda_modulo03_jasonssdev.ipynb  (+11 more)
(+13 files in other folders)
