[project]
name = "01-analisis-de-datos"
version = "0.1.0"
description = "ANALISIS DE DATOS CON PYTHON"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "openpyxl",
    "xlrd",
    "pathlib",
]
